kustomization/dify-web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dify-web
      app.kubernetes.io/instance: dify-web
  template:
    metadata:
      annotations:
        github.com/repo: https://github.com/ivanistao/dify-agentic
      labels:
        app.kubernetes.io/name: dify-web
        app.kubernetes.io/instance: dify-web
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      automountServiceAccountToken: false
      containers:
        - name: dify-web
          image: langgenius/dify-web:1.0.0-beta.1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
