kustomization/dify-web/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dify-web
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: dify-web
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dify-web
    app.kubernetes.io/instance: dify-web
