kustomization/dify-web/ingress-routes.yaml
---
# Traefik Ingress Route without nginx reverse proxy
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dify-web
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - kind: Rule
      # console web url
      match: Host(`dify-web.default.svc.cluster.local:3000`) && PathPrefix(`/`)
      middlewares:
        - name: dify-web-cors
      services:
        - name: dify-web
          port: 3000
    - kind: Rule
      # app web url
      match: Host(`dify-web.default.svc.cluster.local:3000`) && PathPrefix(`/`)
      middlewares:
        - name: dify-web-cors
      services:
        - name: dify-web
          port: 3000
  # tls:
  #   secretName: dify-tls
